--- a/app/src/main/res/layout/activity_order_screen.xml
+++ b/app/src/main/res/layout/activity_order_screen.xml
@@ -9,46 +9,46 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_weight="1"
         android:layout_marginTop="32dp"
         android:ems="10"
         android:layout_gravity="center"
         android:inputType="textPersonName"
-        android:text="Address"
+        android:hint="Address"
         android:textSize="12dp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editTextTextPersonName3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_marginTop="32dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Delivery Time"
+        android:hint="Delivery Time"
         android:textSize="12dp"
         android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextTextPersonName4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_marginTop="32dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Payment Method"
+        android:hint="Payment Method"
         android:textSize="12dp"
         android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/editTextTextPersonName5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
@@ -56,7 +56,7 @@
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Notes:"
+        android:hint="Notes"
         android:textSize="12dp"
         android:textStyle="bold" />
 
@@ -65,16 +65,6 @@
         android:layout_height="25dp"
         android:layout_weight="1"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="24dp"
-            android:text="Total"
-            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/btnOrder"
