--- a/app/src/main/res/layout/activity_order_screen.xml
+++ b/app/src/main/res/layout/activity_order_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,73 +7,109 @@
     tools:context=".Order_Screen"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/txtOrderInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Order Information"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        tools:layout_editor_absoluteX="167dp"
+        tools:layout_editor_absoluteY="33dp" />
+
     <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_weight="1"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:layout_gravity="center"
-        android:inputType="textPersonName"
+        android:id="@+id/txtAddress"
+        android:layout_width="380dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/round_border"
+        android:gravity="center"
         android:hint="Address"
-        android:textSize="12dp"
-        android:textStyle="bold" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtOrderInfo" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Delivery Time"
-        android:textSize="12dp"
-        android:textStyle="bold"/>
+        android:id="@+id/txtTime"
+        android:layout_width="380dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:hint="Delivery Time(Empty means immediately)"
+        android:background="@drawable/round_border"
+        android:gravity="center"
+        android:maxLength="3"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_marginTop="32dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Payment Method"
-        android:textSize="12dp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/editTextTextPersonName5"
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="24dp"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Notes"
-        android:textSize="12dp"
-        android:textStyle="bold" />
+        android:id="@+id/txtPayment"
+        android:layout_width="380dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:hint="Credit Card Number"
+        android:background="@drawable/round_border"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTime" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_height="70dp"
+        android:layout_marginTop="48dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPayment">
 
-        <Button
-            android:id="@+id/btnOrder"
+        <EditText
+            android:id="@+id/txtLastUse"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginLeft="18dp"
+            android:background="@drawable/round_border"
+            android:gravity="center"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:text="Order"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/button_background_green"/>
+            android:ems="10"
+            android:hint="Time//last"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/txtCVC"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginRight="18dp"
+            android:layout_weight="1"
+            android:background="@drawable/round_border"
+            android:gravity="center"
+            android:ems="10"
+            android:hint="CVC"
+            android:inputType="number"
+            android:maxLength="3" />
     </LinearLayout>
-</LinearLayout>
+
+    <Button
+        android:id="@+id/btnOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Order"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/button_background_pink"
+        android:textColor="#efe7dd"
+        android:textStyle="bold"
+        android:textSize="15dp"/>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
