--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -23,10 +23,11 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginBottom="104dp"
-        android:background="@drawable/button_background_green"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/button_background_pink"
+        android:textColor="#efe7dd"
         android:padding="16dp"
         android:text="CONFIRM BASKET"
-        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,20 +80,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_trash" />
-
-    <TextView
-        android:id="@+id/txtClearAll"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Clear All"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgTrash"
-        app:layout_constraintEnd_toStartOf="@+id/btnConfirmBasket"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imgTrash"
-        app:layout_constraintTop_toTopOf="@+id/imgTrash"
-        app:layout_constraintVertical_bias="0.535" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
