creating new account and log out settings

--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -96,10 +96,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="227dp"
         android:background="@drawable/button_background_red"
+        android:onClick="signOut"
         android:padding="16dp"
-        android:textSize="10dp"
         android:text="Log out"
         android:textColor="#efe7dd"
+        android:textSize="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
