--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="64dp"
             android:background="@drawable/button_background_pink"
+            android:onClick="signInClicked"
             android:padding="16dp"
             android:text="LOG IN"
             android:textColor="#efe7dd"
