--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -73,6 +73,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/round_border"
             android:gravity="center"
+            android:inputType="textPassword"
             android:hint="Password"
             android:padding="16dp"
             android:textSize="16sp"
