--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:id="@+id/ads"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:background="#fcdade"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -18,7 +19,21 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="411dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@mipmap/img_ads2_foreground" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="411dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/img_ads1_foreground" />
 
 
         </LinearLayout>
@@ -57,8 +72,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:background="@drawable/button_background_pink"
-                    android:textColor="#efe7dd"
+                    android:onClick="getFav"
                     android:text="Favourıte"
+                    android:textColor="#efe7dd"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -68,6 +84,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:background="@drawable/button_background_pink"
+                    android:onClick="getMeatball"
                     android:text="Meatball"
                     android:textColor="#efe7dd" />
 
@@ -77,8 +94,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:background="@drawable/button_background_pink"
-                    android:textColor="#efe7dd"
-                    android:text="Chıcken" />
+                    android:onClick="getChicken"
+                    android:text="Chıcken"
+                    android:textColor="#efe7dd" />
 
                 <Button
                     android:id="@+id/btnMeats"
@@ -86,24 +104,28 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:background="@drawable/button_background_pink"
-                    android:textColor="#efe7dd"
-                    android:text="Meat" />
+                    android:onClick="getMeat"
+                    android:text="Meat"
+                    android:textColor="#efe7dd" />
 
                 <Button
                     android:id="@+id/btnDrinks"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_background_pink"
                     android:layout_marginBottom="7dp"
-                    android:textColor="#efe7dd"
-                    android:text="DRINK" />
+                    android:background="@drawable/button_background_pink"
+                    android:onClick="getDrink"
+                    android:text="DRINK"
+                    android:textColor="#efe7dd" />
+
                 <Button
                     android:id="@+id/btnDesserts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/button_background_pink"
-                    android:textColor="#efe7dd"
-                    android:text="Dessert" />
+                    android:onClick="getDessert"
+                    android:text="Dessert"
+                    android:textColor="#efe7dd" />
 
             </LinearLayout>
         </ScrollView>
@@ -123,17 +145,30 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/img_chicken1_foreground" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/img_meat2" />
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@mipmap/img_meat1_foreground" />
+
                 <androidx.fragment.app.FragmentContainerView
                     android:id="@+id/fragmentContainerView"
                     android:name="com.example.bringit.FoodFragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@mipmap/img_chicken1" />
             </LinearLayout>
         </ScrollView>
 
