--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -82,6 +82,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:inputType="textPassword"
         android:background="@drawable/round_border"
         android:gravity="center"
         android:hint="Password"
