--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/titles"
-        class="com.example.bringit.FoodFragment"
+        class="com.example.bringit.fragment.FoodFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"/>
